# KlangDienst

./: .gitignore  AudioSink.h  BuildGraph.h  CMakeLists.txt  EqualizerNode.cpp  EqualizerNode.h  Interface.h  InterfaceType.h  KlangDienstSink.h  Link.h  MediaClass.h  MediaRepository.h  Metadata.h  MetadataName.h  MetadataRepository.h  NodeBase.h  README.md  Registry.cpp  Registry.h  Repository.h  StreamOutputAudio.h  main.cpp  main_osx.cpp
backend/: Biquad.cpp  Biquad.h  CMakeLists.txt  Filter.cpp  Filter.h  FilterParams.h  KlangDienstDsp.cpp  KlangDienstDsp.h  MediaClass.h  MetadataName.h
backend/registries/: KlangDienstRegistry.h  PortRegistry.h
common/: Biquad.cpp  Biquad.h  CMakeLists.txt  Dsp.h  DspStats.h  Filter.cpp  FilterParams.cpp  FilterParams.h  FilterRepository.h  FilterType.h  FrequencyTable.cpp  FrequencyTable.h  Persistence.cpp  Persistence.h
debian/: KlangDienst.service.in  postinst  postrm
frontend/: CMakeLists.txt  WebServer.cpp  WebServer.h  WebSocketHandler.cpp  WebSocketHandler.h
frontend/webapp/: CMakeLists.txt  pubspec.yaml
frontend/webapp/lib/: main.dart
frontend/webapp/lib/controllers/: filter_controller.dart
frontend/webapp/lib/models/: filter_coeffs.dart  filter_model.dart  filter_type.dart  loudness_coeffs.dart
frontend/webapp/lib/services/: eq_service.dart  filter_service.dart  websocket_service.dart
frontend/webapp/lib/usecases/: add_filter.dart  init_filters.dart
frontend/webapp/lib/views/: home_page.dart
frontend/webapp/lib/views/widgets/: filter_card.dart
src/: AudioChannel.h  Filter.h  Graph.h  KlangDienstDsp.cpp  KlangDienstDsp.h  KlangDienstSink.h  MediaRole.h  MetadataName.h  MetadataRegistry.h  NodeRegistry.h  PortRegistry.h  Util.h  main.cpp
src/registries/: MetadataRegistry.h  NodeRegistry.h  Registry.h
src/use_cases/: LinkNodesUseCase.h
src/usecases/: BuildGraphUseCase.h  LinkNodesUseCase.h
src/webserver/: WebServer.cpp  WebServer.h
webapp/: pubspec.yaml
webapp/lib/: home_test.dart  main.dart
webapp/lib/controllers/: eq_controller.dart  filter_controller.dart  filter_manager_controller.dart
webapp/lib/models/: filter.dart  filter_model.dart
webapp/lib/services/: eq_service.dart  filter_service.dart  websocket_service.dart
webapp/lib/utils/: freq_table.dart
webapp/lib/views/: dynamic_grid.dart  dynamic_grid_view.dart  eq_view.dart  equalizer_view.dart  filter_grid_view.dart  filter_screen.dart  filter_view.dart  home_page.dart
webapp/lib/views/widgets/: eq_chart.dart  filter_card.dart  filter_param.dart  filter_slider.dart  hold_icon_button.dart
